--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
               'secondary': '#f3f4f6',
               'accent': '#ec4899',
               'accent-hover': '#d946ef',
+              'warning': '#f97316',
+              'warning-hover': '#ea580c',
             },
             keyframes: {
               'fade-in': {
@@ -40,7 +42,8 @@
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
   }
 }
 </script>
